--- a/SaludNewWeb/src/components/Launches.astro
+++ b/SaludNewWeb/src/components/Launches.astro
@@ -24,14 +24,16 @@ const { docs: launches }= await res.json() as APISpaceXResponse
 
 <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
     {
-        launches.map(launch =>(
-                    <LaunchCard 
-                    id={launch.id} 
-                    img={launch.links.patch.small}
-                    details={launch.details}
-                    flightNumber={launch.flight_number}
-                    success={launch.success}
-                    />
+        launches.map(({id,links, details, flight_number: flightNumber, success})=>(
+        <LaunchCard 
+            id={id} 
+            img={links.patch.small}
+            details={details}
+            flightNumber={flightNumber}
+            success={success}
+        />
+        
+                
         ))
     }
 </div>
