--- a/SaludNewWeb/src/components/Header.astro
+++ b/SaludNewWeb/src/components/Header.astro
@@ -1,9 +1,10 @@
 ---
 console.log("Parte donde ira el js");
 import HeaderButton from '../components/HeaderButton.astro';
+import { Counter } from './Counter';
 
 ---
-<header class="py-8 px-4 mx-auto max-w-xl lg:py-16 lg:px-6">
+<header transition:persist class="py-8 px-4 mx-auto max-w-xl lg:py-16 lg:px-6">
     <div class="mx-auto text-center mb-8 lg:mb-16">
         <h2 class="mb-4 text-5xl tracking-tight font-extrabold text-white">
             SpaceX Launces
@@ -12,6 +13,7 @@ import HeaderButton from '../components/HeaderButton.astro';
             All the infromation about SpaceX Launches
         </p>
     </div>
+    <Counter client:visible/>
     <nav
     class="flex flex-col items-center justify-between w-full text-center md:flex-row"
     >
