--- a/SaludNewWeb/src/layouts/Layout.astro
+++ b/SaludNewWeb/src/layouts/Layout.astro
@@ -3,8 +3,8 @@ interface Props {
 	// typescript
 	title: string;
 }
+import { ViewTransitions } from 'astro:transitions';
 import Header from '../components/Header.astro';
-
 const { title } = Astro.props;
 ---
 
@@ -17,6 +17,7 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<ViewTransitions />
 	</head>
 	<body class="bg-gray-900 min-h-screen pb-32">
 		<Header />
